<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BacktestTradesFragment"
    android:orientation="vertical">

                <TableLayout
                    android:id="@+id/trade_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_weight="1"
                            android:padding="10sp"
                            android:text="@string/trade_table_header_tradeid"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_weight="1"
                            android:padding="10sp"
                            android:text="@string/trade_table_header_entry_price"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_weight="1"
                            android:padding="10sp"
                            android:text="@string/trade_table_header_exit_price"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_weight="1"
                            android:padding="10sp"
                            android:text="@string/trade_table_header_pnl"
                            android:textColor="@color/black" />
                    </TableRow>
                </TableLayout>

</ScrollView>