<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/fragment_entry">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/strat_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/strat_app_bar" />
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_rule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"
        app:borderWidth="0dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/add_rule" />


    <LinearLayout
        style="@style/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/stop_gain_loss_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Non-Indicator Rules"
                style="@style/padding_vertical"
                android:textAppearance="?attr/textAppearanceHeadline5"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stop_gain">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stop_gain_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stop_loss">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stop_loss_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Indicator Rules"
            android:textAppearance="?attr/textAppearanceHeadline5"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/strat_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:itemCount="2"
            tools:listitem="@layout/rule_item" />

        <TextView
            android:id="@+id/create_strat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/strat_instruction"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?android:attr/textColorSecondary" />

        <!--    <RelativeLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent"-->
        <!--        android:padding="">-->

        <!--        <Button-->
        <!--            android:id="@+id/add_rule_button"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:text="Next" />-->
        <!--    </RelativeLayout>-->
    </LinearLayout>
</merge>